# snap7

./: CMakeLists.txt  HISTORY.txt  README.md
examples/: CMakeLists.txt
examples/cpp/: apartner.cpp  client.cpp  ppartner.cpp
release/: CMakeLists.txt
src/: CMakeLists.txt
src/core/: s7_server.cpp
