function(add_cpp_example NAME)
    message(STATUS "Adding C++ example: ${NAME}.cpp")
    add_executable(${NAME}_cpp cpp/${NAME}.cpp)
    target_link_libraries(${NAME}_cpp PRIVATE snap7::cpp_wrapper)
    target_compile_definitions(${NAME}_cpp PRIVATE $<$<BOOL:${BUILD_SHARED_LIBS}>:DYNAMIC_LINKING>)
endfunction()

function(add_c_example NAME)
    message(STATUS "Adding C example: ${NAME}.c")
    add_executable(${NAME}_c plain-c/${NAME}.c)
    target_link_libraries(${NAME}_c PRIVATE snap7::snap7)
endfunction()

add_cpp_example(apartner)
add_cpp_example(client)
add_cpp_example(ppartner)
add_cpp_example(server_v10)
add_cpp_example(server)
add_cpp_example(srv_resourceless)

add_c_example(apartner)
add_c_example(client)
add_c_example(ppartner)
add_c_example(server)
add_c_example(srv_resourceless)
